Refactor styles and improve HTML structure

--- a/concentrates.html
+++ b/concentrates.html
@@ -6,7 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
-    :root{--bg:#fafafa;--text:#111;--muted:#666;--card:#fff;--border:#eaeaea;--shadow:0 10px 28px rgba(0,0,0,.10);}
+    :root{
+      --bg:#fafafa;
+      --text:#111;
+      --muted:#666;
+      --card:#fff;
+      --border:#eaeaea;
+      --shadow:0 10px 28px rgba(0,0,0,.10);
+    }
     *{box-sizing:border-box}
     body{font-family:Arial,sans-serif;margin:0;background:var(--bg);color:var(--text)}
     header{text-align:center;padding:26px 16px 12px}
@@ -15,7 +22,8 @@
     .wrap{max-width:1100px;margin:0 auto;padding:16px 16px 46px}
     .back{display:inline-block;margin-bottom:16px;text-decoration:none;font-weight:900;color:#111}
 
-    .list-title{
+    .group{margin-bottom:36px}
+    .group-title{
       font-size:18px;font-weight:900;margin-bottom:10px;
       border-bottom:2px solid #111;display:inline-block;padding-bottom:4px
     }
@@ -29,13 +37,37 @@
       margin-top:12px;
       cursor:pointer;
       transition:transform .08s ease;
+      display:flex;
+      gap:14px;
+      align-items:center;
     }
     .item:hover{transform:translateY(-2px)}
+
+    .thumb{
+      width:92px;height:92px;flex:0 0 92px;
+      border-radius:12px;
+      border:1px solid var(--border);
+      background:#f3f3f3;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
+    }
+    .thumb img{width:100%;height:100%;object-fit:cover;display:block}
+    .noimg{
+      font-size:11px;
+      color:var(--muted);
+      font-weight:900;
+      text-transform:uppercase;
+      letter-spacing:1px;
+    }
+
+    .item-main{flex:1 1 auto; min-width:0;}
     .item-name{font-weight:900;font-size:16px}
     .sale{color:#b00000;font-weight:900;margin-left:6px;font-size:13px}
 
-    .meta{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;font-size:13px}
-    .pill{background:#f4f4f4;border:1px solid #eee;border-radius:999px;padding:6px 10px}
+    .prices{display:flex;flex-wrap:wrap;gap:10px;margin-top:8px;font-size:13px}
+    .price{background:#f4f4f4;border:1px solid #eee;border-radius:999px;padding:6px 10px}
 
     .actions-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
     .btn{border:0;border-radius:999px;padding:10px 14px;font-weight:900;cursor:pointer}
@@ -54,7 +86,10 @@
     .age-btn.yes{background:#111;color:#fff}
     .age-btn.no{background:#eee;color:#111}
 
-    @media(max-width:700px){.brand-logo{width:86%}}
+    @media(max-width:700px){
+      .brand-logo{width:86%}
+      .thumb{width:78px;height:78px;flex-basis:78px}
+    }
   </style>
 
   <script src="cart.js"></script>
@@ -76,18 +111,18 @@
 
 <header>
   <img src="bobby-black.png" class="brand-logo" alt="Bobby Black Exclusive" />
-  <div class="subtitle">Concentrates Menu</div>
+  <div class="subtitle">Concentrates</div>
 </header>
 
 <div class="wrap">
   <a href="index.html" class="back">← Back to Menu</a>
-  <div class="list-title">Concentrates</div>
   <div id="menu"></div>
 </div>
 
 <footer>Updated Weekly • 21+</footer>
 
 <script>
+  // Cart pill
   BBE_CART.mountCartPill();
 
   // Age gate
@@ -99,77 +134,156 @@
     document.getElementById("ageNo").onclick=()=>{window.location.href="https://www.google.com"}
   })();
 
-  function money(n){ return "$"+Number(n).toFixed(0) }
+  function money(n){ return "$" + Number(n).toFixed(0); }
+
+  // Image filenames (must exist in /images/)
+  // Uses item.image from products.json if set, otherwise falls back to this map.
+  const IMAGE_MAP = {
+    "rosin-budder": "RosinBudder.JPG"
+  };
+
+  function getImageForItem(item){
+    if(item.image && item.image.trim()) return item.image.trim();
+    const file = IMAGE_MAP[item.id];
+    if(!file) return "";
+    return "images/" + file;
+  }
+
+  function showConcentratePrice(item){
+    // Primary expected schema for concentrates:
+    // prices: { "perGram": 30 }
+    // availability: { "perGram": true }
+    const available = item.availability?.perGram !== false;
+    const price = item.prices?.perGram;
+    const hasPrice = price !== null && price !== undefined && price !== "";
+    if(available && hasPrice) return "1g: " + money(price);
+    return "1g: N/A";
+  }
 
   fetch("content/products.json",{cache:"no-store"})
     .then(r=>r.json())
     .then(data=>{
-      const items=(data.items||[]).filter(i=>i.category==="Concentrates");
-      const container=document.getElementById("menu");
-      container.innerHTML="";
+      const items=(data.items||[])
+        .filter(i=>i.category==="Concentrates")
+        .slice()
+        .sort((a,b)=>{
+          const ga=(a.subcategory||"Other");
+          const gb=(b.subcategory||"Other");
+          if(ga!==gb) return ga.localeCompare(gb);
+          return (a.name||"").localeCompare(b.name||"");
+        });
 
-      items.forEach(item=>{
-        const div=document.createElement("div");
-        div.className="item";
-        div.onclick=()=>location.href="product.html?id="+encodeURIComponent(item.id);
-
-        const name=document.createElement("div");
-        name.className="item-name";
-        name.textContent=item.name;
-
-        if(item.sale){
-          const s=document.createElement("span");
-          s.className="sale";
-          s.textContent="🚨 SALE";
-          name.appendChild(s);
-        }
-        div.appendChild(name);
-
-        const meta=document.createElement("div");
-        meta.className="meta";
-
-        const perGram=item.prices?.perGram;
-        const p=document.createElement("span");
-        p.className="pill";
-        p.textContent="$ / gram: " + (perGram ? money(perGram) : "N/A");
-        meta.appendChild(p);
-
-        if(item.subcategory){
-          const s=document.createElement("span");
-          s.className="pill";
-          s.textContent=item.subcategory;
-          meta.appendChild(s);
-        }
-
-        div.appendChild(meta);
-
-        const actions=document.createElement("div");
-        actions.className="actions-row";
-
-        const addBtn=document.createElement("button");
-        addBtn.className="btn add";
-        addBtn.type="button";
-        addBtn.textContent="Add";
-        addBtn.onclick=(e)=>{
-          e.stopPropagation();
-          BBE_CART.openAddFlow(item.id, "content/products.json");
-        };
-
-        const viewBtn=document.createElement("button");
-        viewBtn.className="btn view";
-        viewBtn.type="button";
-        viewBtn.textContent="View";
-        viewBtn.onclick=(e)=>{
-          e.stopPropagation();
-          location.href="product.html?id="+encodeURIComponent(item.id);
-        };
-
-        actions.appendChild(addBtn);
-        actions.appendChild(viewBtn);
-        div.appendChild(actions);
-
-        container.appendChild(div);
+      const groups={};
+      items.forEach(i=>{
+        const key=i.subcategory||"Other";
+        if(!groups[key]) groups[key]=[];
+        groups[key].push(i);
       });
+
+      const container=document.getElementById("menu");
+      container.innerHTML = "";
+
+      Object.keys(groups).sort().forEach(groupName=>{
+        const group=document.createElement("div");
+        group.className="group";
+
+        const title=document.createElement("div");
+        title.className="group-title";
+        title.textContent=groupName;
+        group.appendChild(title);
+
+        groups[groupName].forEach(item=>{
+          const div=document.createElement("div");
+          div.className="item";
+          div.onclick=()=>location.href="product.html?id="+encodeURIComponent(item.id);
+
+          // Thumbnail
+          const thumb=document.createElement("div");
+          thumb.className="thumb";
+          const imgPath = getImageForItem(item);
+
+          if(imgPath){
+            const img=document.createElement("img");
+            img.src = imgPath;
+            img.alt = item.name;
+            img.onerror = () => {
+              thumb.innerHTML = "<div class='noimg'>No Image</div>";
+            };
+            thumb.appendChild(img);
+          } else {
+            thumb.innerHTML = "<div class='noimg'>No Image</div>";
+          }
+
+          div.appendChild(thumb);
+
+          // Main
+          const main=document.createElement("div");
+          main.className="item-main";
+
+          const name=document.createElement("div");
+          name.className="item-name";
+          name.textContent=item.name;
+
+          if(item.sale){
+            const s=document.createElement("span");
+            s.className="sale";
+            s.textContent="🚨 SALE";
+            name.appendChild(s);
+          }
+
+          main.appendChild(name);
+
+          const prices=document.createElement("div");
+          prices.className="prices";
+
+          const p=document.createElement("span");
+          p.className="price";
+          p.textContent=showConcentratePrice(item);
+          prices.appendChild(p);
+
+          main.appendChild(prices);
+
+          // Actions
+          const actions=document.createElement("div");
+          actions.className="actions-row";
+
+          const addBtn=document.createElement("button");
+          addBtn.className="btn add";
+          addBtn.type="button";
+          addBtn.textContent="Add";
+          addBtn.onclick=(e)=>{
+            e.stopPropagation();
+            BBE_CART.openAddFlow(item.id, "content/products.json");
+          };
+
+          const viewBtn=document.createElement("button");
+          viewBtn.className="btn view";
+          viewBtn.type="button";
+          viewBtn.textContent="View";
+          viewBtn.onclick=(e)=>{
+            e.stopPropagation();
+            location.href="product.html?id="+encodeURIComponent(item.id);
+          };
+
+          actions.appendChild(addBtn);
+          actions.appendChild(viewBtn);
+          main.appendChild(actions);
+
+          div.appendChild(main);
+          group.appendChild(div);
+        });
+
+        container.appendChild(group);
+      });
+
+      if(items.length===0){
+        container.innerHTML = "<div style='color:#666;font-weight:900'>No concentrates listed yet.</div>";
+      }
+    })
+    .catch(err=>{
+      document.getElementById("menu").innerHTML =
+        "<div style='color:#b00000;font-weight:900'>Error loading products.json</div>";
+      console.error(err);
     });
 </script>
 
