Rename 'crazzy' to 'crazzyy' in flower.html

--- a/flower.html
+++ b/flower.html
@@ -164,7 +164,7 @@
     "sugar-shock": "SugarShock.JPG",
     "zaamatic": "Zaamatic.JPG",
     "blow-pop": "BlowPop.JPG",
-    "crazzy": "Crrazzy.JPG",      // ✅ renamed
+    "crazzyy": "Crrazzy.JPG",      // ✅ renamed
     "fruit-snacks": "FruitStripes.JPG",
     "ready-to-trap": "ReadytoTrap.JPG",
     "sherbert": "Sherbet.JPG",
