--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </div>
 
 <header>
-  <img src="bobby-black.png" alt="Bobby Black Exclusive" class="brand-logo" />
+  <img src="Bobbyblack.png" alt="Bobby Black Exclusive" class="brand-logo" />
   <div class="subtitle">Menu</div>
 </header>
 
