--- a/index.html
+++ b/index.html
@@ -198,7 +198,6 @@
     </div>
     <p class="age-sub">
       All products, pricing, and descriptions are provided for reference only.
-      No transactions, checkout, or delivery occur through this site.
     </p>
   </div>
 </div>
@@ -219,7 +218,7 @@
 
 <footer>
   All products, pricing, and descriptions are provided for reference only.
-  No transactions, checkout, or delivery occur through this site. • Updated Weekly • 21+
+                     • Updated Weekly • 21+ •
 </footer>
 
 <script>
