--- a/flower.html
+++ b/flower.html
@@ -206,7 +206,7 @@
 </div>
 
 <header>
-  <img src="bobby-black.png" class="brand-logo" alt="Bobby Black Exclusive" />
+  <img src="images/Bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
   <div class="subtitle">Flower Menu</div>
 </header>
 
