--- a/flower.html
+++ b/flower.html
@@ -206,7 +206,7 @@
 </div>
 
 <header>
-  <img src="images/Bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
+  <img src="Bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
   <div class="subtitle">Flower Menu</div>
 </header>
 
@@ -216,8 +216,7 @@
 </div>
 
 <footer>
-  All products, pricing, and descriptions are provided for reference only.
-  No transactions, checkout, or delivery occur through this site. • 21+
+  All products, pricing, and descriptions are provided for reference only. 21+
 </footer>
 
 <script>
