Update brand logo image source in accessories.html

--- a/accessories.html
+++ b/accessories.html
@@ -73,7 +73,7 @@
 </div>
 
 <header>
-  <img src="bobby-black.png" class="brand-logo" alt="Bobby Black Exclusive" />
+  <img src="bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
   <div class="subtitle">Accessories Menu</div>
 </header>
 
