--- a/concentrates.html
+++ b/concentrates.html
@@ -262,7 +262,7 @@
 
   <!-- ✅ Black header bar with BBE.png -->
   <header class="site-header">
-    <img src="images/BBE.png" class="brand-logo" alt="Bobby Black Exclusive" />
+    <img src="images/Bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
   </header>
   <div class="subtitle">Concentrates</div>
 
