--- a/product.html
+++ b/product.html
@@ -27,20 +27,21 @@
       color:var(--text);
     }
 
-    /* ✅ Full-width black header bar (product page uses Bobbyb.png) */
-    .site-header{
-      background:#000;
+    /* ===== Header (NEW: solid black bar behind logo) ===== */
+    header{
+      background: var(--black);
       width:100%;
+      padding:18px 16px 16px;
       display:flex;
       align-items:center;
       justify-content:center;
-      padding:22px 16px 18px;
-      border-bottom:1px solid var(--gold-soft);
+      border-bottom:1px solid rgba(212,175,55,.18);
     }
     .brand-logo{
       height:44px;
       width:auto;
       display:block;
+      /* subtle lift on dark bg */
       filter: drop-shadow(0 6px 14px rgba(0,0,0,.35));
     }
 
@@ -122,7 +123,6 @@
       box-shadow:0 14px 34px rgba(0,0,0,.10);
     }
 
-    /* Only keep category badge (no THC badge) */
     .top-badges{
       display:flex;
       gap:10px;
@@ -165,6 +165,23 @@
       margin-bottom:10px;
     }
 
+    /* ===== CA$$H RULE$ badge (NEW) ===== */
+    .collection-wrap{
+      display:none; /* shown only when applicable */
+      margin:10px 0 4px;
+      padding:10px 10px;
+      border:1px solid rgba(212,175,55,.18);
+      border-radius:10px;
+      background: linear-gradient(180deg, rgba(212,175,55,.06), rgba(212,175,55,0));
+    }
+    .collection-logo{
+      height:46px;
+      width:auto;
+      display:block;
+      margin:0 auto;
+      filter: drop-shadow(0 6px 14px rgba(0,0,0,.10));
+    }
+
     .ratingline{
       font-size:11px;
       color:var(--muted);
@@ -187,7 +204,6 @@
     }
     .size-select:hover{border-color:var(--gold)}
 
-    /* Gold hover underline on PRICE */
     .price{
       font-size:34px;
       font-weight:900;
@@ -281,7 +297,6 @@
     }
     .subnote:hover{border-color:var(--gold-soft)}
 
-    /* Gold dividers */
     hr.sep{
       border:0;
       height:1px;
@@ -289,7 +304,6 @@
       background:linear-gradient(90deg, rgba(212,175,55,0), rgba(212,175,55,.55), rgba(212,175,55,0));
     }
 
-    /* Section titles get a gold underline accent */
     .section-title{
       font-size:12px;
       font-weight:900;
@@ -370,19 +384,12 @@
     .age-gate.show{display:flex}
     .age-card{
       background:#fff;
-      max-width:460px;width:100%;
+      max-width:440px;width:100%;
       border-radius:18px;
       padding:22px;
       text-align:center;
       box-shadow:0 20px 60px rgba(0,0,0,.35);
       border:1px solid rgba(0,0,0,0.12);
-    }
-    .age-logo{
-      width:180px;
-      max-width:70%;
-      height:auto;
-      display:block;
-      margin:0 auto 10px;
     }
     .age-title{font-size:22px;font-weight:900;margin-bottom:8px}
     .age-sub{font-size:12px;color:#666;line-height:1.5;margin:10px 0 0}
@@ -429,6 +436,8 @@
       .img-panel{min-height:360px}
       .img-panel img{max-height:420px}
       .badge.type{min-width:120px}
+      .brand-logo{height:40px}
+      .collection-logo{height:42px}
     }
   </style>
 
@@ -440,8 +449,6 @@
   <!-- Age Gate -->
   <div id="ageGate" class="age-gate">
     <div class="age-card">
-      <!-- ✅ Age gate uses BBE.png -->
-      <img src="images/BBE.png" class="age-logo" alt="Bobby Black Exclusive" />
       <div class="age-title">21+ Only</div>
       <p>Please confirm you are 21 years of age or older.</p>
       <div class="age-actions">
@@ -455,8 +462,8 @@
     </div>
   </div>
 
-  <!-- ✅ Black header bar behind the word logo -->
-  <header class="site-header">
+  <!-- Header -->
+  <header>
     <img src="images/Bobbyb.png" class="brand-logo" alt="Bobby Black Exclusive" />
   </header>
 
@@ -477,6 +484,17 @@
         </div>
 
         <div class="title" id="productTitle">Loading…</div>
+
+        <!-- CA$$H RULE$ secondary logo (only shown when applicable) -->
+        <div class="collection-wrap" id="casshWrap">
+          <img
+            id="casshLogo"
+            class="collection-logo"
+            src="images/casshrulesofficial.png"
+            alt="CA$$H RULE$"
+          />
+        </div>
+
         <div class="brandline" id="brandLine">—</div>
 
         <div class="ratingline">
@@ -565,11 +583,7 @@
       "sugar-shock": "SugarShock.JPG",
       "zaamatic": "Zaamatic.JPG",
       "blow-pop": "BlowPop.JPG",
-
       "crazzzy": "Crrazzy.JPG",
-      "crazzy": "Crrazzy.JPG",
-      "crazzyy": "Crrazzy.JPG",
-
       "fruit-snacks": "FruitStripes.JPG",
       "ready-to-trap": "ReadytoTrap.JPG",
       "sherbert": "Sherbet.JPG",
@@ -629,6 +643,9 @@
     const aboutBy = document.getElementById("aboutBy");
     const aboutText = document.getElementById("aboutText");
     const effectsGrid = document.getElementById("effectsGrid");
+
+    const casshWrap = document.getElementById("casshWrap");
+    const casshLogo = document.getElementById("casshLogo");
 
     let currentItem = null;
 
@@ -719,6 +736,18 @@
       imgPanel.appendChild(img);
     }
 
+    function applyCasshRulesBranding(item){
+      // Show CA$$H RULE$ logo ONLY when the product belongs to CA$H RULE$
+      const isCassh = (item.subcategory || "").trim() === "CA$H RULE$";
+      if(isCassh){
+        casshWrap.style.display = "block";
+        // If the file path/case is wrong, hide gracefully so it doesn't look broken
+        casshLogo.onerror = () => { casshWrap.style.display = "none"; };
+      } else {
+        casshWrap.style.display = "none";
+      }
+    }
+
     fetch("content/products.json", { cache:"no-store" })
       .then(r=>r.json())
       .then(data=>{
@@ -743,6 +772,7 @@
         brandLine.textContent = brand.toUpperCase();
         ratingText.textContent = "0";
 
+        applyCasshRulesBranding(item);
         renderImage(item);
 
         aboutTitle.textContent = `ABOUT: ${safeUpper(brand)} | ${safeUpper(item.name)}`;
